Update 'how can I help' info #536
- Link to FreedomBox Contribute page
- Link to translation using Webplate

--- a/plinth/modules/help/templates/help_contribute.html
+++ b/plinth/modules/help/templates/help_contribute.html
@@ -27,10 +27,15 @@
 
   <p>
     {% blocktrans trimmed %}
-    TODO: Add content
+    The <a href="https://wiki.debian.org/FreedomBox/Contribute">{{ box_name }} Contribute page</a> is the best place to start if you're willing to help.
     {% endblocktrans %}
   </p>
 
 
+  <p>
+    {% blocktrans trimmed %}
+    You can also visit the <a href="https://hosted.weblate.org/projects/freedombox">Weblate translation platform</a> for {{ box_name }} to help with translations.
+    {% endblocktrans %}
+  </p>
 
 {% endblock %}
