--- a/plinth/modules/help/templates/help_contribute.html
+++ b/plinth/modules/help/templates/help_contribute.html
@@ -38,4 +38,25 @@
     {% endblocktrans %}
   </p>
 
+
+  <h3>Here is a list of items where help is needed</h3>
+
+  <p> </p>
+ <!-- display help items -->
+   <div class="panel-group">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+            <a data-toggle="collapse" href="#collapse1">Collapsible list group</a>
+          </h4>
+        </div>
+        <div id="collapse1" class="panel-collapse collapse">
+          <ul class="list-group">
+            <li class="list-group-item">One</li>
+            <li class="list-group-item">Two</li>
+            <li class="list-group-item">Three</li>
+          </ul>
+        </div>
+      </div>
+   </div>
 {% endblock %}
