--- a/plinth/modules/help/templates/help_contribute.html
+++ b/plinth/modules/help/templates/help_contribute.html
@@ -43,20 +43,23 @@
 
   <p> </p>
  <!-- display help items -->
+
+  {% for k, v in help_items.items %}
    <div class="panel-group">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h4 class="panel-title">
-            <a data-toggle="collapse" href="#collapse1">Collapsible list group</a>
+            <a data-toggle="collapse" href="#{{ k }}">{{ k }}</a>
           </h4>
         </div>
-        <div id="collapse1" class="panel-collapse collapse">
+        <div id="{{ k }}" class="panel-collapse collapse">
           <ul class="list-group">
-            <li class="list-group-item">One</li>
-            <li class="list-group-item">Two</li>
-            <li class="list-group-item">Three</li>
+              {% for item in v %}
+            <li class="list-group-item">{{ item }}</li>
+              {% endfor %}
           </ul>
         </div>
       </div>
    </div>
+  {% endfor %}
 {% endblock %}
